--- a/.classpath
+++ b/.classpath
@@ -16,6 +16,7 @@
 	<classpathentry kind="lib" path="extlib/junit-4.5.jar"/>
 	<classpathentry kind="lib" path="extlib/saxpath.jar"/>
 	<classpathentry kind="lib" path="extlib/worldwind.jar"/>
+	<classpathentry kind="lib" path="extlib/commons-logging-api-1.1.1.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="output" path="classes"/>
 </classpath>
